--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ packages = [{include = "data_structures_project"}]
 python = "^3.11"
 
 
+[tool.poetry.group.dev.dependencies]
+coverage = "^7.2.7"
+flake8 = "^6.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
